# zk_kerberos

./: .gitignore  README.md
mopro-r0-ecdsa-app/mopro-r0-example-app/: Config.toml  Makefile
mopro-r0-ecdsa-app/mopro-r0-example-app/flutter/lib/: main.dart
mopro-r0-ecdsa-app/mopro-r0-example-app/flutter/mopro_flutter_plugin/android/src/main/kotlin/uniffi/mopro/: mopro.kt
mopro-r0-ecdsa-app/mopro-r0-example-app/src/: lib.rs
mopro-r0-ecdsa-app/risc0-circuit/methods/guest/src/: main.rs
mopro-r0-ecdsa-app/risc0-circuit/src/: main.rs
zkk_app/: Makefile  README.md  transfer.sh
zkk_app/mopro-r0-example-app/: Cargo.toml  Makefile  transfer.sh
zkk_app/mopro-r0-example-app/flutter/: pubspec.yaml
zkk_app/mopro-r0-example-app/flutter/android/app/src/main/: AndroidManifest.xml
zkk_app/mopro-r0-example-app/flutter/lib/: main.dart
zkk_app/mopro-r0-example-app/flutter/lib/models/: settings_model.dart
zkk_app/mopro-r0-example-app/flutter/lib/screens/: authentication_page.dart  login_page.dart  services_page.dart  settings_page.dart  welcome_page.dart
zkk_app/mopro-r0-example-app/src/: lib.rs
zkk_app/risc0-circuit/: Cargo.toml  New Document.txt
zkk_app/risc0-circuit/methods/: Cargo.toml
zkk_app/risc0-circuit/methods/guest/: Cargo.toml
zkk_app/risc0-circuit/methods/guest/src/: main.rs
zkk_app/risc0-circuit/src/: keys.rs  main.rs
zkk_server/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md
zkk_server/src/: keys.rs  main.rs
zkk_webclient/: Cargo.toml  build.sh  index.html  styles.css
zkk_webclient/src/: app.rs  lib.rs  main.rs  models.rs  utils.rs
zkk_webclient/src/components/: button.rs  mod.rs  spinner.rs
zkk_webclient/src/pages/: authentication.rs  login.rs  mod.rs  services.rs  settings.rs  welcome.rs
