[package]
name = "zkk_server"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
thiserror = "1.0"
hkdf = "0.12"
sha2 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
zeroize = "1.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
anyhow = "1"
once_cell = "1.19"
bincode = { version = "2.0.1", features = ["serde"] }
risc0-zkvm = "3.0.3"