[package]
name = "risc0-circuit"
version = { workspace = true }
edition = { workspace = true }


[dependencies]
methods = { path = "./methods" }
risc0-zkvm = { version = "3.0.3", features = ["client"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
rsa = { version = "0.9.8", features = ["serde"] }
bincode = { version = "2.0.1", features = ["serde"] }
reqwest = "0.12.23"

[build-dependencies]
risc0-build = { version = "3.0.3" }
