[package]
name = "risc0_circuit"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "^3.0.3", default-features = false, features = ['std', 'getrandom'] }
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false }
rsa = "0.9.8"
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
